--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Haa1010",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3"
