--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-use-sessionstorage": "^1.0.2",
+    "sweetalert": "^2.1.2",
     "ws": "3.3.2"
   },
   "scripts": {
